<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hessah.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:fontFamily="serif-monospace"
            android:text="@string/team_A"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TeamA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="15dp"
            android:fontFamily="serif-monospace"
            android:text="@string/Zero"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/six_points"
            android:text="@string/six_points"
            style="@style/Button"
            android:onClick="PlusSixPointsTeamA" />

        <Button
            android:id="@+id/three_points"
            android:text="@string/three_points"
            style="@style/Button"
            android:onClick="PlusThreePointsTeamA"/>

        <Button
            android:id="@+id/two_points"
            android:text="@string/two_points"
            style="@style/Button"
            android:onClick="PlusTwoPointsTeamA"/>

        <Button
            android:id="@+id/one_point"
            android:text="@string/one_point"
            style="@style/Button"
            android:onClick="PlusOnePointTeamA"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="3dp"
        android:layout_height="450dp"
        android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:fontFamily="serif-monospace"
                android:text="@string/team_B"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TeamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="15dp"
                android:fontFamily="serif-monospace"
                android:text="@string/Zero"
                android:textColor="@color/colorAccent"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/six_points_B"
                android:text="@string/six_points"
                style="@style/Button"
                android:onClick="PlusSixPointsTeamB"/>

            <Button
                android:id="@+id/three_points_B"
                android:text="@string/three_points"
                style="@style/Button"
                android:onClick="PlusThreePointsTeamB"/>

            <Button
                android:id="@+id/two_points_B"
                android:text="@string/two_points"
                style="@style/Button"
                android:onClick="PlusTwoPointsTeamB"/>

            <Button
                android:id="@+id/one_point_B"
                android:text="@string/one_point"
                style="@style/Button"
                android:onClick="PlusOnePointTeamB"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:onClick="Reset"
        android:text="@string/reset"
        android:textColor="@color/colorText" />

</LinearLayout>